fix: fix sizing of images on small screen size

--- a/src/app/components/attribute-detail-view/attribute-detail-view.component.scss
+++ b/src/app/components/attribute-detail-view/attribute-detail-view.component.scss
@@ -37,6 +37,40 @@
   margin-bottom: 1rem;
 }
 
+
+@media (min-width: 1050px) {
+  .detail-container {
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    gap: 3rem;
+  }
+
+  .attribute-name {
+    grid-column: 1 / -1;
+  }
+
+  .main-image {
+    margin-bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+
+    img {
+      width: auto;
+      max-width: 100%;
+      object-fit: contain;
+      object-position: left;
+    }
+  }
+
+  .thumbnail-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 200px;
+  }
+}
+
 .main-image {
   margin-bottom: 2rem;
   display: block;
@@ -48,10 +82,10 @@
   img {
     width: 100%;
     max-height: 70vh;
-    object-fit: contain; /* Ensures the entire image is visible, even if it leaves some empty space */
-    object-position: center; /* Centers the image within the container */
-    display: block; /* Avoids any extra inline spacing issues */
-    transform: scale(0.95); /* Scales the image down slightly */
+    object-fit: contain;
+    object-position: center;
+    display: block;
+    transform: scale(0.95);
   }
 }
 
@@ -66,6 +100,7 @@
   border-radius: 0.5rem;
   overflow: hidden;
   aspect-ratio: 16 / 9;
+
   img {
     width: 100%;
     height: 100%;
@@ -74,5 +109,21 @@
 
   &.active {
     outline: 3px solid var(--active)
+  }
+}
+
+@media (max-width: 500px) {
+  .thumbnail-flex {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    gap: 1rem;
+  }
+
+  .thumbnail {
+    width: 110px;
+  }
+
+  .thumbnail img {
+    width: 100%;
+    object-fit: cover;
   }
 }
